2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupadd.8.xml: Fixed formatting issue.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/userdel.8.xml: Added warning for files that could remain
	owner by the removed user.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/useradd.8.xml: Fix formatting typo.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupdel.8.xml: Move the warning on filesystems checks to
	the CAVEAT section.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/GID_MAX.xml: Fixed typo. useradd was specified
	twice.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupadd.8.xml, man/useradd.8.xml: names may also contain
	digits.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/shadow.5.xml: What is important in shadow is not the
	encryption, but that the file is not world readable.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Updated French translation. Thanks to ABBAS
	Belkacem for the login.defs update.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: Split the CAVEAT section in paragraphs.
	Updated information on the user_busy check.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/userdel.8.xml: Document tat -f may force teh deletion of a
	busy user.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/usermod.c: Check if the user is busy when the user's
	UID, name or home directory is changed.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, libmisc/user_busy.c, libmisc/Makefile.am,
	lib/prototypes.h: Move user_busy() to libmisc/user_busy.c.
	* NEWS, libmisc/user_busy.c: On Linux, do not check if an user is
	logged in with utmp, but check if the user is running some